--- a/1-screening.tex
+++ b/1-screening.tex
@@ -1,5 +1,5 @@
 %!TeX root = 1-screening
-\documentclass[main]{subfiles}
+\documentclass[main.tex]{subfiles}
 
 \begin{document}
 
@@ -13,12 +13,53 @@
 
 \todo{Ren2021}
 
-In the past decade, large-scale computational screening studies have become an important part of the materials science innovation pipeline,\cite{Hautier_2019, Cole_2020} trying to move beyond the serendipitous model of materials discovery.\cite{Ludwig_2019, Stein_2019} High-throughput computational discovery techniques are used in the generation of novel hypothetical structures for screening,\cite{Wilmer_2011, Boyd_2016} as well as in trying to explore more in depth and more systematically the materials whose structure has already been published, in order to map their physical and chemical properties.\cite{GomezGualdron_2014,Moliner_2019,SalcedoPerez_2019} While the idea of large-scale exploration of materials is not new, and such databases --- whether experimental or computational in the source of their data --- have been around for several decades now,\cite{PDB_1971, Grazulis_2009, Groom_2016} this field has recently seen a rapid expansion enabled by several factors.
+In the past decade, large-scale computational screening studies have become an important part of the materials science innovation pipeline,\cite{Hautier_2019, Cole_2020} trying to move beyond the serendipitous model of materials discovery.\cite{Ludwig_2019, Stein_2019} High-throughput computational discovery techniques are used in the generation of novel hypothetical structures for screening,\cite{Wilmer_2012, Boyd_2016} as well as in trying to explore more in depth and more systematically the materials whose structure has already been published, in order to map their physical and chemical properties.\cite{GomezGualdron_2014,Moliner_2019,SalcedoPerez_2019} While the idea of large-scale exploration of materials is not new, and such databases --- whether experimental or computational in the source of their data --- have been around for several decades now,\cite{PDB_1971, Grazulis_2009, Groom_2016} this field has recently seen a rapid expansion enabled by several factors. 
+
+The first factor is the growth of public, open databases of materials structures (and sometimes properties).\cite{Coudert_2019} To give only one example, projects like the Materials Genome Initiative have~\cite{dePablo_2014, dePablo_2019} integrated theory, computation, synthesis, and characterization that led to the generation of vast materials datasets.\cite{Jain_2013, Jain_2016} Secondly, advances in the methods for construction of hypothetical structures for complex supramolecular assemblies have led to the creation of large-scale databases of hypothetical structures.\cite{Foster_2004, Wilmer_2013,Boyd_2016} Thirdly, text and data mining are allowing to augment databases with content previously thought not being machine-readable and indexable, for example by identifying unreported properties of materials in older scientific papers.\cite{Tshitoyan_2019, Court_2020} Finally, the use of artificial intelligence techniques, such as statistical learning,\cite{Butler_2018} can enable in some cases by several orders of magnitude the scale of databases that can be screened.\cite{Kim_2017, Borboudakis_2017, Chibani_2020}
+
+Focusing more on the larger process of digital materials discovery, and the role of large databases in materials research,\cite{Zhou_2019} Boyd et al.\cite{Boyd_2017} provide a broad review of the computational developments involved in the nanoporous materials genome research effort. They show that a large number of high-throughput screening studies have been targeted specifically at the question of gas phase separation, with a range of different adsorbate molecules going from noble gases, small molecules (both apolar and polar), to short alkanes and aromatics. Both Adil et al.\cite{Adil_2017} and Sturluson et al.\cite{Sturluson_2019} provide general reviews on the modelling in MOFs for gas separation and storage, and structure/separation relationships in MOFs for gas separation, featuring specific sections to the still open problem of Xe/Kr separation.
+
+Chung et al. proposed a new Computation-Ready, Experimental MOF database (CoRE MOF 2019) containing over 14,000 cleaned structures.\cite{Chung_2019} The structures originated from the Cambridge Structural Database and Web of Science search. These structures went through a curation process: (i) by removing coordinates with low partial occupancies, (ii) by converting the structure to P1 symmetry, (iii) by removing free solvents (i.e., free solvent removed FSR), (iv) also removing bound solvent molecules (i.e., all solvent removed ASR), then (v) by restoring semi-automatically some disordered structures using a crystal generator. After this process, the structures are said to be ``clean''.
+
+In this study, we used the 12,020 structures of the CoRE MOF 2019-ASR (all solvent removed) database that are publicly available. Then, we extracted the non-disordered structures and the structures with a cell volume smaller than \SI{20}{\nano\meter\cubed} (to limit the overall calculation time). This resulted in a total of 9,668 remaining structures included in our systematic simulations to compare their selectivity and other thermodynamic quantities such as enthalpy and entropy at different pressures and compositions.
+
+\todo{below: Ren2022}
+
+Before building any screening strategy or performing any computational screening, one needs to generate a set of files describing the atomic structure of the materials. Nanoporous materials can have different degrees of crystallinity from perfectly crystalline to completely amorphous. Most of the computational work is focused on crystalline structures, since the atoms are well-described within a periodic framework, which enables faster simulations. The presence of defects are also usually neglected, which could explain some of the discrepancies between simulations and experiments. And amorphous materials are described by thousands of atomic positions in order to grasp their intrinsic non-periodicity.\cite{Thyagarajan_2020} One can distinguish roughly four main classes of crystalline nanoporous materials: the inorganic zeolites (\emph{e.g.} aluminosilicates, aluminophosphates), the porous polymer networks, the covalent organic frameworks (COFs) and the metal--organic frameworks (containing the zeolitic imidazolate frameworks \emph{ie.} ZIFs and others). This diversity of nanoporous materials offer a wide range of potential candidates for any targeted applications.
+
+The International Zeolite Association (IZA) gave a standardised set of 244 zeolites (in their idealized all-silica form) that can be used for screening purposes. To generate a dataset of structures, existing experimental database like the Cambridge Structural Database can be exploited. However, the raw structures determined experimentally by X-ray cannot be used directly as is. To obtain a computation-ready dataset, Chung \emph{et al.} used algorithmic cleaning procedures to build the publicly available Computation-Ready Experimental MOF (CoRE MOF) database.\cite{Chung_2014, Chung_2019} CoRE MOF 2019 contains about 14,000 MOF structures, which is the biggest experimental database. Similar approach applied to organic frameworks led to the construction of a set of 187 COFs with disorder-free and solvent-free structures.\cite{Tong_2017,Ongari_2019}
+
+These experiment-based databases can already be used in computational screenings to retrieve valuable information, but unknown structures that are yet to be discovered are not represented. To overcome the limits and biases of experimental synthesis, artificial ways of generating nanoporous material datasets can be used, which proved to be extremely efficient. The first \emph{in silico} generated database of about 130,000 MOFs used a recursion-based assembly (or tinkertoy-like) algorithm to combine 102 building blocks.\cite{Wilmer_2012} Martin and Haranczyk then proposed a topology-specific structure assembly algorithm that leverage the topological information of the structures.\cite{Martin_2014} Inspired by this algorithm, topology-based databases emerged a few years later with the set of 13,000 MOF structures generated using the Topologically Based Crystal Constructor (ToBaCCo) algorithm developed by Colon, G{\'{o}}mez-Gualdr{\'{o}}n and Snurr.\cite{Colon_2017}
+Later, Boyd and Woo proposed another topology-based algorithm using a graph theoretical approach and generated a 300,000 structures database (BW-DB) based on 46 different network topologies.\cite{Boyd_2016}
+Similar approaches are used for other classes of materials, Deem and coworkers proposed a dataset of nearly 2.6 million hypothetical zeolite structures.\cite{Earl_2006,Deem_2009,Pophale_2011}
+However, one could wonder if these hypothetical structures are synthesisable and can remain stable under operational conditions (\emph{e.g.} thermal, mechanical, radioactive constraints). To discuss their synthetic likelihood, Anderson and G{\'{o}}mez-Gualdr{\'{o}}n computed the free energies of 8,500 hypothetical structures and compared them to experimentally observed MOF structures.\cite{Anderson_2020}
+Later, Nandy \emph{et al.} performed a meta-analysis of thousands of articles associated to the CoRE MOF 2019 database to extract their experimental solvent-removal stability and thermal decomposition temperature.\cite{Nandy_2021} These data are then leveraged in the training of multiple ML models to predict stability properties. These predictions can be very useful to gauge the relative stability of each materials and to only consider stable structures. Other types of materials have been explored, Turcani \emph{et al.} published 60,000 organic cage structures and used machine learning to predict their stability based on the shape persistence metric.\cite{Turcani_2018}
+
+The Materials Genome Initiative, a 100 million dollar effort from the White House that aims to ``discover, develop, and deploy new materials twice as fast'', led to the creation of the ``Materials Project'', a centralised database containing all the above mentioned structures.\cite{kalil2011national,Matgenome,Jain_2013}
+The fast development of this nanoporous materials genome motivated Boyd \emph{et al.} to write a comprehensive review on all the initiatives on generating new data for computational analysis.\cite{Boyd_2017}
+
+Yet, the sole increase in size of the databases is not enough. One needs to add diversity to have more general knowledge on the maximum performance and the explanatory features of such performance. Moreover, the diversity of structures ensure the quality of the predicted best materials for a given application.
+To qualitatively or quantitatively assess the diversity of a database, inventive methodologies have been developed.
+For instance, Martin, Smit and Haranczyk proposed a Voronoi hologram representation as a way of measuring similarities between structures to generate geometrically diverse subsets of a database.\cite{Martin_2011}
+Moosavi \emph{et al.} made a comparative study of the diversity of three well-known databases CoRE MOF 2019,\cite{Chung_2019} BW-DB\cite{Boyd_2016} and ToBaCCo\cite{Gomez_Gualdron_2016, Colon_2017}  using geometrical and chemical descriptors to design a theoretical strategy for generating the most diverse set of materials.\cite{Moosavi_2020}
+Another approach consists in searching for similarities instead of differences in the materials by studying topological patterns in the data.\cite{Lee_2017}
+These investigations on the data structures give a solid ground to develop novel materials by objectively defining similarity, diversity and novelty. From the analysis gathered so far, one would need to radically change the approach by proposing materials with new chemistry, topology or mechanism (\emph{e.g.} flexibility) in order to significantly improve the diversity of the current databases.
 
 \subsection{Simulation tools}
 
 \subsection{Machine learning assisted screening}
 
+\todo{Simon sumup}
+
+In 2015, Simon et al.\cite{Simon_2015} analyzed the Nanoporous Materials Genome,\cite{Simon_2015_EES, Boyd_2017} a database of about 670,000 experimental and hypothetical porous material structures, including MOFs, zeolites, PPNs, ZIFs, and COFs, for candidate adsorbents for xenon/krypton separations. It is possibly the largest-scale study performed in this area, both by the sheer number of frameworks involved and by the diversity of their nature. Because such a set is too big for brute-force screening with GCMC simulations, they proposed a multi-scale modelling strategy combining machine learning algorithms (trained on a diverse subset of 15,000 materials) with molecular simulations (used both to generate the ML training data, and to refine the separation properties for the top performers obtained by the ML predictor). Without going into details (see Fig.~\ref{fgr:Simon} for more details), the ML model they trained was mainly based on geometric structural descriptors, with the addition of a single energy-based descriptor: the Voronoi energy (i.e.the average energy of a xenon atom at the accessible nodes in the Voronoi partition of space). In addition to identifying and describing some top performing materials, the authors also analyzed the correlations between high Xe/Kr selectivity and the geometric properties of the frameworks, in order to ``rationalize the strong link between pore size and selectivity''. In particular, by developing theoretical pore models of spherical and cylindrical geometries, they could highlight the general geometrical trends observed, but also the fact that there is a wide diversity of performance beyond the geometrical features of the frameworks.
+
+\begin{figure*}[t]
+    \centering
+    \includegraphics[width=0.99\textwidth]{figures/1-screening/Simon.jpg}
+    \caption{\ Schematic representation of large-scale screening of nanoporous materials for Xe/Kr adsorption-based separation by Simon et al.,\cite{Simon_2015} based on a combination of Grand Canonical Monte Carlo simulations and machine learning algorithm (Random Forest Regressor). The main goal of this screening is to find high-performing materials in a large dataset of both experimental and hypothetical materials. 
+    Adapted with permission from Ref.~\citenum{Simon_2015}. Copyright 2015 American Chemical Society.
+    }\label{fgr:Simon}
+\end{figure*}
 
 \section{A literature overview}
 
