--- a/thesis.bib
+++ b/thesis.bib
@@ -104,7 +104,7 @@
 	title = {A generalized method for constructing hypothetical nanoporous materials of any net topology from graph theory},
 	journal = {{CrystEngComm}}
 }    
-@article{Wilmer_2011,
+@article{Wilmer_2012,
   author = { Wilmer, Christopher E. and Leaf, Michael and Lee, Chang Yeon and Farha, Omar K. and Hauser, Brad G. and Hupp, Joseph T. and Snurr, Randall Q. },
   title = { Large-scale screening of hypothetical metal--organic frameworks },
   journal = { Nature Chem. },
@@ -216,6 +216,17 @@
   pages = { 4459--4475 },
   doi = {10.1021/acs.chemmater.5b01475},
   url = {https://doi.org/10.1021/acs.chemmater.5b01475},
+}
+@article{Simon_2015_EES,
+  author = { Simon, Cory M. and Kim, Jihan and Gomez-Gualdron, Diego A. and Camp, Jeffrey S. and Chung, Yongchul G. and Martin, Richard L. and Mercado, Rocio and Deem, Michael W. and Gunter, Dan and Haranczyk, Maciej and Sholl, David S. and Snurr, Randall Q. and Smit, Berend },
+  title = { The materials genome in action: identifying the performance limits for methane storage },
+  journal = { Energy Environ. Sci. },
+  year = { 2015 },
+  volume = { 8 },
+  issue = { 4 },
+  pages = { 1190--1199 },
+  doi = {10.1039/C4EE03515A},
+  url = {http://doi.org/10.1039/C4EE03515A},
 }
 @article{Jablonka_2022,
   doi = {10.1021/acscentsci.2c01177},
@@ -335,3 +346,392 @@
   doi = {10.1038/newbio233223b0},
   url = {http://doi.org/10.1038/newbio233223b0},
 }
+@article{Coudert_2019,
+  author = { Coudert, Fran\c{c}ois-Xavier },
+  title = { Materials Databases: The Need for Open, Interoperable Databases with Standardized Data and Rich Metadata },
+  journal = { Adv. Theory Simul. },
+  year = { 2019 },
+  volume = { 2 },
+  issue = { 11 },
+  pages = { 1900131 },
+  doi = {10.1002/adts.201900131},
+  url = {http://doi.org/10.1002/adts.201900131},
+}
+@article{dePablo_2014,
+  author = { de Pablo, Juan J. and Jones, Barbara and Kovacs, Cora Lind and Ozolins, Vidvuds and Ramirez, Arthur P. },
+  title = { The Materials Genome Initiative, the interplay of experiment, theory and computation },
+  journal = { Curr. Op. Solid State Mater. Sci. },
+  year = { 2014 },
+  volume = { 18 },
+  issue = { 2 },
+  pages = { 99--117 },
+  doi = {10.1016/j.cossms.2014.02.003},
+  url = {http://doi.org/10.1016/j.cossms.2014.02.003},
+}
+@article{dePablo_2019,
+  author = { de Pablo, Juan J. and Jackson, Nicholas E. and Webb, Michael A. and Chen, Long-Qing and Moore, Joel E. and Morgan, Dane and Jacobs, Ryan and Pollock, Tresa and Schlom, Darrell G. and Toberer, Eric S. and Analytis, James and Dabo, Ismaila and DeLongchamp, Dean M. and Fiete, Gregory A. and Grason, Gregory M. and Hautier, Geoffroy and Mo, Yifei and Rajan, Krishna and Reed, Evan J. and Rodriguez, Efrain and Stevanovic, Vladan and Suntivich, Jin and Thornton, Katsuyo and Zhao, Ji-Cheng },
+  title = { New frontiers for the materials genome initiative },
+  journal = { npj Comput. Mater. },
+  year = { 2019 },
+  volume = { 5 },
+  issue = { 1 },
+  pages = { 99 },
+  doi = {10.1038/s41524-019-0173-4},
+  url = {http://doi.org/10.1038/s41524-019-0173-4},
+}
+@article{Jain_2016,
+  author = { Jain, Anubhav and Persson, Kristin A. and Ceder, Gerbrand },
+  title = { Research Update: The materials genome initiative: Data sharing and the impact of collaborative ab initio databases },
+  journal = { APL Mater. },
+  year = { 2016 },
+  volume = { 4 },
+  issue = { 5 },
+  pages = { 053102 },
+  doi = {10.1063/1.4944683},
+  url = {http://doi.org/10.1063/1.4944683},
+}
+@article{Jain_2013,
+  author = { Jain, Anubhav and Ong, Shyue Ping and Hautier, Geoffroy and Chen, Wei and Richards, William Davidson and Dacek, Stephen and Cholia, Shreyas and Gunter, Dan and Skinner, David and Ceder, Gerbrand and Persson, Kristin A. },
+  title = { Commentary: The Materials Project: A materials genome approach to accelerating materials innovation },
+  journal = { APL Mater. },
+  year = { 2013 },
+  volume = { 1 },
+  issue = { 1 },
+  pages = { 011002 },
+  doi = {10.1063/1.4812323},
+  url = {http://doi.org/10.1063/1.4812323},
+}
+@incollection{Wilmer_2013,
+  doi = {10.1007/128_2013_490},
+  url = {https://doi.org/10.1007/128_2013_490},
+  year = {2013},
+  publisher = {Springer International Publishing},
+  pages = {257--289},
+  author = {Christopher E. Wilmer and Randall Q. Snurr},
+  title = {Large-Scale Generation and Screening of Hypothetical Metal-Organic Frameworks for Applications in Gas Storage and Separations},
+  booktitle = {Topics in Current Chemistry}
+}
+@article{Foster_2004,
+  author = { Foster, Martin D. and Delgado Friedrichs, Olaf and Bell, Robert G. and Almeida Paz, Filipe A. and Klinowski, Jacek },
+  title = { Chemical Evaluation of Hypothetical Uninodal Zeolites },
+  journal = { J. Am. Chem. Soc. },
+  year = { 2004 },
+  volume = { 126 },
+  issue = { 31 },
+  pages = { 9769--9775 },
+  doi = {10.1021/ja037334j},
+  url = {http://doi.org/10.1021/ja037334j},
+}
+@article{Tshitoyan_2019,
+  author = { Tshitoyan, Vahe and Dagdelen, John and Weston, Leigh and Dunn, Alexander and Rong, Ziqin and Kononova, Olga and Persson, Kristin A. and Ceder, Gerbrand and Jain, Anubhav },
+  title = { Unsupervised word embeddings capture latent knowledge from materials science literature },
+  journal = { Nature },
+  year = { 2019 },
+  volume = { 571 },
+  issue = { 7763 },
+  pages = { 95--98 },
+  doi = {10.1038/s41586-019-1335-8},
+  url = {http://doi.org/10.1038/s41586-019-1335-8},
+}
+@article{Court_2020,
+  author = { Court, Callum J. and Cole, Jacqueline M. },
+  title = { Magnetic and superconducting phase diagrams and transition temperatures predicted using text mining and machine learning },
+  journal = { npj Comput. Mater. },
+  year = { 2020 },
+  volume = { 6 },
+  issue = { 1 },
+  pages = { 38 },
+  doi = {10.1038/s41524-020-0287-8},
+  url = {http://doi.org/10.1038/s41524-020-0287-8},
+}
+@article{Butler_2018,
+  author = { Butler, Keith T. and Davies, Daniel W. and Cartwright, Hugh and Isayev, Olexandr and Walsh, Aron },
+  title = { Machine learning for molecular and materials science },
+  journal = { Nature },
+  year = { 2018 },
+  volume = { 559 },
+  issue = { 7715 },
+  pages = { 547--555 },
+  doi = {10.1038/s41586-018-0337-2},
+  url = {http://doi.org/10.1038/s41586-018-0337-2},
+}
+@article{Borboudakis_2017,
+  author = { Borboudakis, Giorgos and Stergiannakos, Taxiarchis and Frysali, Maria and Klontzas, Emmanuel and Tsamardinos, Ioannis and Froudakis, George E. },
+  title = { Author Correction: Chemically intuited, large-scale screening of MOFs by machine learning techniques },
+  journal = { npj Comput. Mater. },
+  year = { 2017 },
+  volume = { 3 },
+  issue = { 1 },
+  pages={1--7},
+  doi = {10.1038/s41524-017-0051-x},
+  url = {http://doi.org/10.1038/s41524-017-0051-x},
+}
+@article{Kim_2017,
+  author = { Kim, Edward and Huang, Kevin and Jegelka, Stefanie and Olivetti, Elsa },
+  title = { Virtual screening of inorganic materials synthesis parameters with deep learning },
+  journal = { npj Comput. Mater. },
+  year = { 2017 },
+  volume = { 3 },
+  issue = { 1 },
+  pages = { 1120 },
+  doi = {10.1038/s41524-017-0055-6},
+  url = {http://doi.org/10.1038/s41524-017-0055-6},
+}
+@article{Chibani_2020,
+  author = { Chibani, Siwar and Coudert, Fran\c{c}ois-Xavier },
+  title = { Machine learning approaches for the prediction of materials properties },
+  journal = { APL Mater. },
+  year = { 2020 },
+  volume = { 8 },
+  issue = { 8 },
+  pages = { 080701 },
+  doi = {10.1063/5.0018384},
+  url = {http://doi.org/10.1063/5.0018384},
+}
+@article{Zhou_2019,
+  author = { Zhou, Teng and Song, Zhen and Sundmacher, Kai },
+  title = { Big Data Creates New Opportunities for Materials Research: A Review on Methods and Applications of Machine Learning for Materials Design },
+  journal = { Engineering },
+  year = { 2019 },
+  volume = { 5 },
+  issue = { 6 },
+  pages = { 1017--1026 },
+  doi = {10.1016/j.eng.2019.02.011},
+  url = {http://doi.org/10.1016/j.eng.2019.02.011},
+}
+@article{Boyd_2017,
+  author = { Boyd, Peter G. and Lee, Yongjin and Smit, Berend },
+  title = { Computational development of the nanoporous materials genome },
+  journal = { Nature Rev. Mater. },
+  year = { 2017 },
+  volume = { 2 },
+  issue = { 8 },
+  pages = { 1 },
+  doi = {10.1038/natrevmats.2017.37},
+  url = {http://doi.org/10.1038/natrevmats.2017.37},
+}
+@article{Adil_2017,
+  author = { Adil, Karim and Belmabkhout, Youssef and Pillai, Renjith S. and Cadiau, Amandine and Bhatt, Prashant M. and Assen, Ayalew H. and Maurin, Guillaume and Eddaoudi, Mohamed },
+  title = { Gas/vapour separation using ultra-microporous metal--organic frameworks: insights into the structure/separation relationship },
+  journal = { Chem. Soc. Rev. },
+  year = { 2017 },
+  volume = { 46 },
+  issue = { 11 },
+  pages = { 3402--3430 },
+  doi = {10.1039/C7CS00153C},
+  url = {http://doi.org/10.1039/C7CS00153C},
+}
+@article{Sturluson_2019,
+  author = { Sturluson, Arni and Huynh, Melanie T. and Kaija, Alec R. and Laird, Caleb and Yoon, Sunghyun and Hou, Feier and Feng, Zhenxing and Wilmer, Christopher E. and Col\'on, Yamil J. and Chung, Yongchul G. and Siderius, Daniel W. and Simon, Cory M. },
+  title = { The role of molecular modelling and simulation in the discovery and deployment of metal-organic frameworks for gas storage and separation },
+  journal = { Mol. Simulat. },
+  year = { 2019 },
+  volume = { 45 },
+  issue = { 14-15 },
+  pages = { 1082--1121 },
+  doi = {10.1080/08927022.2019.1648809},
+  url = {http://doi.org/10.1080/08927022.2019.1648809},
+}
+@article{Thyagarajan_2020,
+	doi = {10.1021/acs.chemmater.0c03057},
+	url = {https://doi.org/10.1021/acs.chemmater.0c03057},
+	year = 2020,
+	month = {aug},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {32},
+	number = {18},
+	pages = {8020--8033},
+	author = {Raghuram Thyagarajan and David S. Sholl},
+	title = {A Database of Porous Rigid Amorphous Materials},
+	journal = {Chemistry of Materials}
+}
+@article{Chung_2019,
+	doi = {10.1021/acs.jced.9b00835},
+	url = {https://doi.org/10.1021/acs.jced.9b00835},
+	year = 2019,
+	month = {nov},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {64},
+	number = {12},
+	pages = {5985--5998},
+	author = {Yongchul G. Chung and Emmanuel Haldoupis and Benjamin J. Bucior and Maciej Haranczyk and Seulchan Lee and Hongda Zhang and Konstantinos D. Vogiatzis and Marija Milisavljevic and Sanliang Ling and Jeffrey S. Camp and Ben Slater and J. Ilja Siepmann and David S. Sholl and Randall Q. Snurr},
+	title = {Advances, Updates, and Analytics for the Computation-Ready, Experimental Metal{\textendash}Organic Framework Database: {CoRE} {MOF} 2019},
+	journal = {Journal of Chemical {\&} Engineering Data}
+}
+@article{Tong_2017,
+	doi = {10.1016/j.ces.2017.05.004},
+	url = {https://doi.org/10.1016/j.ces.2017.05.004},
+	year = 2017,
+	month = {aug},
+	publisher = {Elsevier {BV}},
+	volume = {168},
+	pages = {456--464},
+	author = {Minman Tong and Youshi Lan and Qingyuan Yang and Chongli Zhong},
+	title = {Exploring the structure-property relationships of covalent organic frameworks for noble gas separations},
+	journal = {Chemical Engineering Science}
+}    
+@article{Ongari_2019,
+  title={Building a consistent and reproducible database for adsorption evaluation in covalent--organic frameworks},
+  author={Ongari, Daniele and Yakutovich, Aliaksandr V and Talirz, Leopold and Smit, Berend},
+  journal={ACS central science},
+  volume={5},
+  number={10},
+  pages={1663--1675},
+  year={2019},
+  publisher={ACS Publications}
+}
+@article{Martin_2014,
+	doi = {10.1021/cg500158c},
+	url = {https://doi.org/10.1021%2Fcg500158c},
+	year = 2014,
+	month = {apr},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {14},
+	number = {5},
+	pages = {2431--2440},
+	author = {Richard Luis Martin and Maciej Haranczyk},
+	title = {Construction and Characterization of Structure Models of Crystalline Porous Polymers},
+	journal = {Crystal Growth \& Design}
+}
+@article{Earl_2006,
+	doi = {10.1021/ie0510728},
+	url = {https://doi.org/10.1021/ie0510728},
+	year = 2006,
+	month = {jan},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {45},
+	number = {16},
+	pages = {5449--5454},
+	author = {David J. Earl and Michael W. Deem},
+	title = {Toward a Database of Hypothetical Zeolite Structures},
+	journal = {Industrial {\&} Engineering Chemistry Research}
+}
+@article{Pophale_2011,
+	doi = {10.1039/c0cp02255a},
+	url = {https://doi.org/10.1039/c0cp02255a},
+	year = 2011,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {13},
+	number = {27},
+	pages = {12407},
+	author = {Ramdas Pophale and Phillip A. Cheeseman and Michael W. Deem},
+	title = {A database of new zeolite-like materials},
+	journal = {Physical Chemistry Chemical Physics}
+}
+@article{Deem_2009,
+	doi = {10.1021/jp906984z},
+	url = {https://doi.org/10.1021/jp906984z},
+	year = 2009,
+	month = {oct},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {113},
+	number = {51},
+	pages = {21353--21360},
+	author = {Michael W. Deem and Ramdas Pophale and Phillip A. Cheeseman and David J. Earl},
+	title = {Computational Discovery of New Zeolite-Like Materials},
+	journal = {The Journal of Physical Chemistry C}
+}       
+@article{Anderson_2020,
+	doi = {10.1021/acs.chemmater.0c00744},
+	url = {https://doi.org/10.1021/acs.chemmater.0c00744},
+	year = 2020,
+	month = {jul},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {32},
+	number = {19},
+	pages = {8106--8119},
+	author = {Ryther Anderson and Diego A. G{\'{o}}mez-Gualdr{\'{o}}n},
+	title = {Large-Scale Free Energy Calculations on a Computational Metal{\textendash}Organic Frameworks Database: Toward Synthetic Likelihood Predictions},
+	journal = {Chemistry of Materials}
+}
+@article{Nandy_2021,
+  doi = {10.1021/jacs.1c07217},
+  url = {https://doi.org/10.1021/jacs.1c07217},
+  year = {2021},
+  month = oct,
+  publisher = {American Chemical Society ({ACS})},
+  volume = {143},
+  number = {42},
+  pages = {17535--17547},
+  author = {Aditya Nandy and Chenru Duan and Heather J. Kulik},
+  title = {Using Machine Learning and Data Mining to Leverage Community Knowledge for the Engineering of Stable Metal{\textendash}Organic Frameworks},
+  journal = {Journal of the American Chemical Society}
+}
+@article{Turcani_2018,
+  doi = {10.1021/acs.chemmater.8b03572},
+  url = {https://doi.org/10.1021/acs.chemmater.8b03572},
+  year = {2018},
+  month = dec,
+  publisher = {American Chemical Society ({ACS})},
+  volume = {31},
+  number = {3},
+  pages = {714--727},
+  author = {Lukas Turcani and Rebecca L. Greenaway and Kim E. Jelfs},
+  title = {Machine Learning for Organic Cage Property Prediction},
+  journal = {Chemistry of Materials}
+}
+@manual{kalil2011national,
+  title={Materials Genome Initiative
+for Global Competitiveness},
+  institution={The National Science and Technology Council},
+  author={Kalil, T and Wadia, C},
+  year={2011},
+  publisher={Washington}
+}
+@misc{Matgenome,
+  title = {The Materials Genome Initiative},
+  year={2022},
+  note = { Available online at \url{https://www.mgi.gov/}}
+}
+@article{Jain_2013,
+	doi = {10.1063/1.4812323},
+	url = {https://doi.org/10.1063/1.4812323},
+	year = 2013,
+	month = {jul},
+	publisher = {{AIP} Publishing},
+	volume = {1},
+	number = {1},
+	pages = {011002},
+	author = {Anubhav Jain and Shyue Ping Ong and Geoffroy Hautier and Wei Chen and William Davidson Richards and Stephen Dacek and Shreyas Cholia and Dan Gunter and David Skinner and Gerbrand Ceder and Kristin A. Persson},
+	title = {Commentary: The Materials Project: A materials genome approach to accelerating materials innovation},
+	journal = {{APL} Materials}
+}
+@article{Martin_2011,
+	doi = {10.1021/ci200386x},
+	url = {https://doi.org/10.1021/ci200386x},
+	year = 2011,
+	month = {dec},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {52},
+	number = {2},
+	pages = {308--318},
+	author = {Richard Luis Martin and Berend Smit and Maciej Haranczyk},
+	title = {Addressing Challenges of Identifying Geometrically Diverse Sets of Crystalline Porous Materials},
+	journal = {Journal of Chemical Information and Modeling}
+}  
+@article{Moosavi_2020,
+	doi = {10.1038/s41467-020-17755-8},
+	url = {https://doi.org/10.1038/s41467-020-17755-8},
+	year = 2020,
+	month = {aug},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {11},
+	number = {1},
+	pages = {},
+	author = {Seyed Mohamad Moosavi and Aditya Nandy and Kevin Maik Jablonka and Daniele Ongari and Jon Paul Janet and Peter G. Boyd and Yongjin Lee and Berend Smit and Heather J. Kulik},
+	title = {Understanding the diversity of the metal-organic framework ecosystem},
+	journal = {Nature Communications}
+}
+@article{Lee_2017,
+	doi = {10.1038/ncomms15396},
+	url = {https://doi.org/10.1038/ncomms15396},
+	year = 2017,
+	month = {may},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {8},
+	number = {1},
+	pages={},
+	author = {Yongjin Lee and Senja D. Barthel and Pawe{\l} D{\l}otko and S. Mohamad Moosavi and Kathryn Hess and Berend Smit},
+	title = {Quantifying similarity of pore-geometry in nanoporous materials},
+	journal = {Nature Communications}
+}    
